--- a/templates/edit.html
+++ b/templates/edit.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Freelancer - Start Bootstrap Theme</title>
+  <title>Edit</title>
 
   <!-- Custom fonts for this theme -->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -39,7 +39,9 @@
        <ol>
            {%for person in people%}
           <li style="font-size: 20px;">Name: {{person.name}}. Email: {{person.email}}. Phone: {{person.phone}}. Picture: {{person.picture}} 
+           <a href="{{ url_for('display_person_edit',person_id= person.person_id) }}">edit</a>
            <a href="{{ url_for('delete_person',person_id= person.person_id) }}">delete</a></li>
+           </li>
            {%endfor%}
       </ol>
 
